# nsp-intellision

./: .gitignore  .vscodeignore  AGENTS.md  LICENSE  README.md  nsf-lsp-1.0.0.vsix  p-intellisionserver_cppbuild_mingw  package-lock.json  package.json  tsconfig.json
client/: package-lock.json  package.json
client/src/: client_active_unit.ts  (+20 more)
docs/: architecture.md  client-editor-features.md  development.md  resources.md  settings.development.example.json  testing.md  type-method-interface-contract.md
server/: package-lock.json
server_cpp/: CMakeLists.txt  compile_commands.json
server_cpp/resources/builtins/intrinsics/: base.json  override.json  schema.json
server_cpp/resources/language/directives/: base.json  schema.json
server_cpp/resources/language/keywords/: base.json  schema.json
server_cpp/resources/language/preprocessor_macros/: base.json  schema.json
server_cpp/resources/language/semantics/: base.json  schema.json
server_cpp/resources/methods/object_methods/: base.json  schema.json
server_cpp/resources/types/object_families/: base.json  override.json  schema.json
server_cpp/resources/types/object_types/: base.json  schema.json
server_cpp/resources/types/scalar_types/: base.json  schema.json
server_cpp/resources/types/type_overrides/: override.json  schema.json
server_cpp/src/: active_unit.cpp  active_unit.hpp  art_macro_defaults.hpp  ast_signature_index.cpp  ast_signature_index.hpp  call_query.cpp  call_query.hpp  callsite_parser.cpp  callsite_parser.hpp  compiler_macro_snapshot_provider.cpp  compiler_macro_snapshot_provider.hpp  completion_rendering.cpp  completion_rendering.hpp  conditional_ast.cpp  conditional_ast.hpp  crash_handler.cpp  crash_handler.hpp  current_doc_semantic_runtime.cpp  current_doc_semantic_runtime.hpp  declaration_query.cpp  declaration_query.hpp  deferred_doc_runtime.cpp  deferred_doc_runtime.hpp  definition_fallback.cpp  definition_fallback.hpp  definition_location.hpp  diagnostics.cpp  diagnostics.hpp  diagnostics_emit.hpp  diagnostics_expression_type.hpp  diagnostics_indeterminate.hpp  diagnostics_io.hpp  diagnostics_preprocessor.hpp  diagnostics_prerequisites.cpp  diagnostics_prerequisites.hpp  diagnostics_runtime.cpp  diagnostics_runtime.hpp  diagnostics_semantic.hpp  diagnostics_semantic_common.hpp  diagnostics_symbol_type.hpp  (+118 more)
server_cpp/src/app/: main.cpp  main_background_refresh.cpp  main_diagnostics_audit_debug.cpp  main_diagnostics_audit_debug.hpp  main_did_change_classification.cpp  main_include_graph_cache.cpp  main_occurrence_helpers.cpp
server_cpp/src/diagnostics/: diagnostics.cpp  diagnostics_emit.cpp  diagnostics_expression_type.cpp  diagnostics_indeterminate.cpp  diagnostics_io.cpp  diagnostics_preprocessor.cpp  diagnostics_semantic.cpp  diagnostics_semantic_common.cpp  diagnostics_symbol_type.cpp  diagnostics_syntax.cpp
server_cpp/src/requests/: server_request_handler_background.cpp  server_request_handler_completion.cpp  server_request_handler_definition.cpp  server_request_handler_hover.cpp  server_request_handler_references.cpp  server_request_handler_signature.cpp  server_request_handlers.cpp
server_cpp/src/workspace/: workspace_index.cpp  workspace_index_cache.cpp  workspace_index_extract.cpp  workspace_index_internal.cpp  workspace_index_reverse_include.cpp  workspace_index_scan.cpp  workspace_index_scheduler.cpp
server_cpp/tools/: hover_smoke_test.py
snippets/: nsf.code-snippets
syntaxes/: hlsl.tmGrammar.json  nsf.language-configuration.json
test_files/: client_feature.fx  config_runtime_suite.nsf  diagnostics_line_map.nsf  diagnostics_member_assignment.nsf  diagnostics_multiline_local.nsf  diagnostics_numeric_decimal.nsf  diagnostics_numeric_invalid_suffix.nsf  diagnostics_numeric_suffix.nsf  diagnostics_numeric_suffix_variants.nsf  diagnostics_smoke_ok.nsf  diagnostics_struct_members_across_structs_ok.nsf  include_macros.hlsl  include_main.nsf  include_target.hlsl  include_texture_like.hlsl  layered_runtime_macro_root.nsf  layered_runtime_macro_shared.ush  main.nsf  module_analysis_context_defines.nsf  module_analysis_context_include_a.hlsl  module_analysis_context_include_b.hlsl  module_analysis_context_include_switch.nsf  module_completion_attribute.nsf  module_completion_current_doc.nsf  module_current_doc_precedence_local.nsf  module_decls.nsf  module_definition_function_call_in_assignment.nsf  module_definition_multiline_fx_decl_a.nsf  module_definition_multiline_fx_decl_b.nsf  module_definition_preprocessor_else_branch.nsf  module_definition_scan_a.nsf  module_definition_scan_b.nsf  module_definition_scan_macro_a.nsf  module_definition_scan_macro_b.nsf  module_definition_scan_symbols_a.nsf  module_definition_scan_symbols_b.nsf  module_definition_struct_member.nsf  (+171 more)
(+192 files in other folders)
